# training2024-25

./: .gitignore  LICENSE  README.md
Advent_Of_Code/: READEME.md
Advent_Of_Code/Day1/: READEME.md  Task1.js
Advent_Of_Code/Day3/: Task2.js
Bootstrap/: README.md
Bootstrap/Task1/: README.md  index.html
Flowchart/: (1)AreaOfCircle.js  (10)Series4.js  (11)Series5.js  (12)SumOfNNumber.js  (13)SinX.js  (2)PerimeterOfCircle.js  (3)MaxNumInTwoNumber.js  (4)MaxNumberThreeNumber.js  (5)Print1ToNNumber.js  (6)Factorial.js  (7)Series1.js  (8)Series2.js  (9)Series3.js  README.MD
Gherkin/: READEME.md
Gherkin/Practice-Login/: READEME.md  Task1WithBg.feature  Task1WithTable.feature
Gherkin/Task1-ClouchBase/: cucumber.json  index.js  package-lock.json  (+3 more)
Gherkin/Task1-ClouchBase-MinIo/: READEME.md  Task1_Presentation.pptx  cucumber.json  generateReport.js  package-lock.json  package.json  playwright.config.js
HTML_CSS/: README.md
Javascript/: README.md
Node/: READEME.md
Rust_Learning/: Conc.docx  README.md
Rust_Learning/Axum/apitest/: Cargo.toml  README.md
Rust_Learning/Axum/apitest/src/: main.rs
Rust_Learning/Axum/routing/: Cargo.toml
Rust_Learning/Axum/routing/src/: lib.rs  main.rs
Rust_Learning/Axum/routing/src/routes/: hello_world.rs  mirror_body_string.rs  mirror_custom_header.rs  mod.rs  path_variable.rs  set_middleware_custom_header.rs  validate_with_serde.rs
Rust_Learning/Axum/task1/: .env  Cargo.toml  README.md  query.sql
Rust_Learning/Axum/task1/logs/: app.log.2025-02-12  app.log.2025-02-13
Rust_Learning/Axum/task1/src/: lib.rs  main.rs
Rust_Learning/Axum/task1/src/db/: connection.rs
Rust_Learning/Axum/task1/src/handlers/: employee.rs  mod.rs  user.rs
Rust_Learning/Axum/task1/src/middleware/: auth.rs  extract_id_to_header.rs  log.rs  mod.rs  rotate_token.rs
Rust_Learning/Axum/task1/src/routes/: employee.rs  mod.rs  user.rs
Rust_Learning/Axum/task1/src/utils/: mod.rs
Rust_Learning/Axum/todo/backend/rust/axum/lessons/routing/: Cargo.toml
Rust_Learning/Axum/todo/backend/rust/axum/lessons/routing/src/routes/: always_errors.rs  custom_json_extractor.rs  get_json.rs  middleware_message.rs  mirror_body_json.rs  mirror_user_agent.rs  mod.rs  query_params.rs  read_middleware_custom_header.rs  request_201.rs
(+227 files in other folders)
