[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
