[package]
name = "task1"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
bcrypt = "0.17.0"
cargo-watch = "8.5.3"
chrono = "0.4.39"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.13.1", features = ["v4"] }
