[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
validator = { version = "0.20.0", features = ["derive"] }
